k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: erp
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3225
